[package]
name = "fictional-waffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
crossterm = "0.27.0"
portable-pty = "0.8.1"
ratatui = "0.23.0"
tokio = { version = "1.33.0", features = ["full"] }
tui-term = "0.1.4"
vt100 = "0.15.2"
