[package]
name = "fictional-waffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
portable-pty = "0.8.1"
ratatui = "0.23.0"
rodio = "0.17.1"
rusty_audio = "1.4.1"
strum = "0.25.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.9"
tui-big-text = "0.1.4"
tui-term = "0.1.4"
vt100 = "0.15.2"

[bins]
name = "tui"
path = "src/tui.rs"

